# posey

./: .cursorignore  .cursorrules  .gitignore  .pnp.cjs  .prettierrc.js  .pylintrc  .yarnrc.yml  DEVELOPMENT.md  GITOPS.md  LICENSE  MIGRATION.md  PORTS.md  README.md  couchbase-rendered.yaml  external-dns-current.yaml  ingress-backup.yaml  nx.json  package.json  postgres-statefulset-current.yaml  qdrant-rendered.yaml  requirements.txt  tsconfig.json  turbo.json
.circleci/: config-base.yml  config.yml  continue_config.inline.yml  continue_config.published.yml  continue_config.yml  data-couchbase-config.yml  data-postgres-config.yml  (+8 more)
services/core/agents/: .dockerignore  .flake8  Dockerfile  Makefile  README.md  alembic.ini  package.json  pyproject.toml  requirements.txt  run_shared_config_test.py  setup.cfg
services/core/agents/alembic/: env.py
services/core/agents/alembic/versions/: 07043b94667f_synchronize_models_with_existing_schema.py  11688379fbcd_auto_generated_migration.py  297121bd471b_synchronize_models_with_existing_schema_.py  58b1b2155348_synchronize_models_with_existing_schema_.py  66a33d61a3f0_synchronize_models_with_existing_schema_.py  83aa5e5d05b6_synchronize_models_with_existing_schema_.py  9efb022e01b8_synchronize_models_v1.py  9f0d43da1129_add_missing_elements.py  abe47f79c330_synchronize_models_with_existing_schema_.py  cdd24297d279_add_llm_configuration_tables.py  d34fc03e4e3d_synchronize_models_with_existing_schema_.py  ecd92f3ec52a_your_detailed_migration_message_here.py
services/core/agents/app/: __init__.py  main.py
services/core/agents/app/abilities/: base.py  file_processing.py  image_ability.py
services/core/agents/app/abilities/image/: provider_registry.py
services/core/agents/app/abilities/image/providers/: __init__.py  base.py  stable_diffusion_provider.py
services/core/agents/app/agents/: base.py
services/core/agents/app/config/: __init__.py  abilities.py  database.py  llm_loader.py  logging.py  posey.py  service.py  settings.py
services/core/agents/app/config/prompts/: __init__.py  base.py
services/core/agents/app/config/prompts/agents/: content_analysis.json  image.json  memory.json  research.json  synthesis.json  voyager.json
services/core/agents/app/config/prompts/minions/: content_analysis.json  image_generation.json  image_processing.json  research.json  synthesis.json  voyager.json
services/core/agents/app/config/prompts/orchestrator/: posey.json
services/core/agents/app/config/prompts/shared/: base.json  formatter.json  response_styles.json
services/core/agents/app/db/: __init__.py  connection.py  drop.py  utils.py
services/core/agents/app/db/migrations/: 000_init_schema.sql  001_users.sql  002_auth_fields.sql  003_llm.sql  004_agents.sql  005_conversations.sql  006_projects.sql  007_background_tasks.sql  008_research.sql  010_memory.sql  011_favorites.sql  012_feedback_tables.sql  014_integration_tables.sql  016_files.sql  017_integrations.sql  019_agent_updates.sql  020_conversation_updates.sql  023_project_conversations.sql  025_minion_configs.sql  026_invite_codes.sql  026_managed_minions.sql  __init__.py  rollback.py
services/core/agents/app/db/models/: __init__.py  agent.py  agent_training_history.py  background_task.py  conversation.py  favorite.py  feedback.py  file.py  integration.py  invite_code.py  llm_api_key.py  llm_model.py  llm_provider.py  managed_minion.py  media_history.py  memory.py  migration.py  minion_llm_config.py  project.py  research.py  scheduler.py  seed_version.py  session.py  user.py
services/core/agents/app/llm/adapters/: anthropic.py  base_adapter.py  ollama.py
services/core/agents/app/middleware/: auth.py  rate_limit.py  response.py
services/core/agents/app/minions/: base.py  content_analysis.py  image.py  image_generation.py  image_processing.py  memory.py  research.py  synthesis.py  voyager.py
services/core/agents/app/models/: analysis.py  api.py  context.py  db.py  responses.py  system.py
services/core/agents/app/orchestrators/: posey.py
services/core/agents/app/routers/: __init__.py  admin.py  conversations.py  docs.py  embeddings.py  health.py  mcp.py  migrations.py  projects.py  users.py
services/core/agents/app/routers/admin/: __init__.py  llm_models.py  llm_providers.py  managed_minions.py  minion_configs.py
services/core/agents/app/routers/orchestrator/: posey.py
services/core/agents/app/schemas/: __init__.py  search.py
services/core/agents/app/scripts/: __init__.py  check_db.py  init.py
services/core/agents/app/services/: user.py
services/core/agents/app/utils/: ability_registry.py  ability_utils.py  agent.py  context.py  db.py  embeddings.py  memory_store.py  message_handler.py  minion.py  minion_registry.py  prompt_helpers.py  response_handler.py  result_types.py  serializers.py  task_status_update.py  training.py
services/core/agents/docker/ml-base/: Dockerfile  ml-requirements.txt
services/core/agents/k8s/: agents-ingress.yaml  agents-pvc.yaml  deployment-local.yaml  service.yaml
services/core/agents/plugins/image_providers/: midjourney_provider.py
services/core/agents/scripts/: build-ml-base.sh  entrypoint.sh  generate-migration.sh  init-couchbase.sh  init-docker-cache.sh  test-with-cache.sh
services/core/agents/tests/: test_shared_config.py
(+1226 files in other folders)
