[tool.poetry.scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 5555" 

[tool.pylint.messages_control]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring"
] 

# qdrant-client = "^1.10.1" # Old version
qdrant-client = "^1.13.3" # Corrected to match latest available server v1.13.3
