[tool.poetry]
name = "posey-agents"
version = "0.1.0"
description = "Posey AI Agents Service"
authors = ["Posey AI Team <hello@posey.ai>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13" # Keep Python version constraint

# Web Framework & API
fastapi = {extras = ["all"], version = ">=0.115.8"} # Keep extras
uvicorn = {extras = ["standard"], version = ">=0.32.0"}
pydantic = ">=2.9.2"
pydantic-settings = ">=2.6.1"
starlette = ">=0.41.2"
python-dotenv = ">=1.0.0"
httpx = ">=0.27.0"
sse-starlette = "==2.2.1" # Pinned version

# Database & ORM
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.36"}
asyncpg = ">=0.29.0,<0.31.0"
psycopg = {extras = ["binary", "pool"], version = "==3.2.4"} # Keep extras, pinned version
psycopg2-binary = "*" # Use * if exact version isn't critical, or pin if needed
alembic = ">=1.14.0"

# Vector DB & Cache
qdrant-client = ">=1.13.3,<1.14.0" # Range based on requirements
redis = ">=5.0.1"
couchbase = ">=4.3.3" # Added missing dependency

# LLM / AI / LangChain
pydantic-ai = {version = "==0.0.55", extras = ["logfire"]}
langgraph = ">=0.2.72"
# langchain-huggingface = "^0.0.3" # Already present
# langchain-community = "^0.2.10" # Already present
# langchain-qdrant = "^0.1.3" # Already present
langchain-huggingface = "*" # Assuming okay to use latest if not constrained
langchain-community = "*" # Assuming okay to use latest if not constrained
langchain-qdrant = "*" # Assuming okay to use latest if not constrained
openai = ">=1.53.0"
anthropic = ">=0.38.0"

# Auth & Security
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
python-multipart = ">=0.0.6"
jwt = ">=1.3.1" # Added from requirements

# Utilities
pytz = ">=2024.1" # Already present
beautifulsoup4 = ">=4.12.3"
lxml = ">=5.3.0"
psutil = ">=5.9.8"
requests = ">=2.32.3"
aiohttp = ">=3.11.11" # Added from requirements
tenacity = ">=8.2.3"
textblob = ">=0.19.0" # Added from requirements
apscheduler = ">=3.11.0" # Added from requirements
email-validator = ">=2.1.0" # Added from requirements
cryptography = ">=42.0.0" # Added missing dependency

# File Manipulation
python-docx = "==1.1.2" # Pinned version
pypdf = "==5.2.0" # Pinned version
openpyxl = "==3.1.5" # Pinned version
tabula-py = "==2.10.0" # Pinned version
python-magic = "==0.4.27" # Pinned version
xlrd = "==2.0.1" # Pinned version
xlsxwriter = "==3.2.2" # Pinned version
pyxlsb = "==1.0.10" # Pinned version
xlwt = "==1.3.0" # Pinned version
et-xmlfile = "==2.0.0" # Pinned version

# Posey Specific / Internal
mcp = ">=1.6.0" # Changed to match requirements.txt, assuming this is correct now
py-rust-stemmers = ">=0.1.0,<0.3.0" # Added from requirements

# Monitoring & Logging
structlog = ">=24.1.0"
prometheus-client = ">=0.19.0"
opentelemetry-api = ">=1.22.0" # Added from requirements
opentelemetry-sdk = ">=1.22.0" # Added from requirements
opentelemetry-exporter-otlp = ">=1.22.0" # Added from requirements
opentelemetry-instrumentation-fastapi = ">=0.43b0" # Added from requirements
opentelemetry-instrumentation-httpx = "*" # Added for Logfire

# SDKs
boto3 = ">=1.36.12"
botocore = ">=1.36.12"

# Data Handling (Ensure these are not in base image if needed here)
# pandas = "*" # Assume in base image
# numpy = "*" # Assume in base image
datasets = ">=3.1.0" # Added from requirements
Markdown = ">=3.8"


[tool.poetry.group.dev.dependencies]
# Testing
pytest = ">=7.4.3" # Moved from requirements
pytest-asyncio = ">=0.21.1" # Moved from requirements
pytest-cov = ">=4.1.0" # Moved from requirements
pytest-mock = ">=3.12.0" # Moved from requirements

# Development Tools
black = ">=23.11.0" # Moved from requirements
isort = ">=5.12.0" # Moved from requirements
flake8 = ">=6.1.0" # Moved from requirements
mypy = ">=1.7.1" # Moved from requirements

[build-system]
requires = ["poetry-core>=1.0.0"] # Ensure modern poetry-core
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 5555"

# --- Add Entry Points --- #
[tool.poetry.plugins."posey.minions"]
# Core Minions
"content_analysis" = "app.minions.content_analysis:ContentAnalysisMinion"
"image_generation" = "app.minions.image_generation:ImageGenerationMinion"
"image_processing" = "app.minions.image_processing:ImageProcessingMinion"
"memory" = "app.minions.memory:MemoryMinion"
"research" = "app.minions.research:ResearchMinion"
"synthesis" = "app.minions.synthesis:SynthesisMinion"
"voyager" = "app.minions.voyager:VoyagerMinion"

[tool.pylint.messages_control]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring"
]

# Note: Removed the duplicate qdrant-client entries
